// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should display message if there are no recipes 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div>
    Sorry, nothing matched your filter term
</div>,
  "nodes": Array [
    <div>
      Sorry, nothing matched your filter term
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <List
        favourites={Array []}
        recipes={Array []}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "favourites": Array [],
          "recipes": Array [],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div>
          Sorry, nothing matched your filter term
</div>,
        "_debugID": 4,
        "_renderedOutput": <div>
          Sorry, nothing matched your filter term
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <List
    favourites={Array []}
    recipes={Array []}
/>,
}
`;

exports[`List should render all the recipes correctly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <CardGroup>
    <div
        className="recipe"
    >
        <Link
            className="card"
            replace={false}
            to="/recipe/1"
        >
            <Recipe
                recipe={
                    Object {
                        "id": "1",
                        "ingredients": Array [
                          Object {
                            "name": "steak",
                            "quantity": "3",
                          },
                        ],
                      }
                }
            />
        </Link>
        <Favourite
            favourite={false}
            recipeId="1"
        />
    </div>
    <div
        className="recipe"
    >
        <Link
            className="card"
            replace={false}
            to="/recipe/2"
        >
            <Recipe
                recipe={
                    Object {
                        "id": "2",
                        "ingredients": Array [
                          Object {
                            "name": "chicken",
                            "quantity": "2",
                          },
                        ],
                      }
                }
            />
        </Link>
        <Favourite
            favourite={false}
            recipeId="2"
        />
    </div>
</CardGroup>,
  "nodes": Array [
    <CardGroup>
      <div
            className="recipe"
      >
            <Link
                  className="card"
                  replace={false}
                  to="/recipe/1"
            >
                  <Recipe
                        recipe={
                              Object {
                                    "id": "1",
                                    "ingredients": Array [
                                      Object {
                                        "name": "steak",
                                        "quantity": "3",
                                      },
                                    ],
                                  }
                        }
                  />
            </Link>
            <Favourite
                  favourite={false}
                  recipeId="1"
            />
      </div>
      <div
            className="recipe"
      >
            <Link
                  className="card"
                  replace={false}
                  to="/recipe/2"
            >
                  <Recipe
                        recipe={
                              Object {
                                    "id": "2",
                                    "ingredients": Array [
                                      Object {
                                        "name": "chicken",
                                        "quantity": "2",
                                      },
                                    ],
                                  }
                        }
                  />
            </Link>
            <Favourite
                  favourite={false}
                  recipeId="2"
            />
      </div>
</CardGroup>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <List
        favourites={Array []}
        recipes={
                Array [
                        Object {
                          "id": "1",
                          "ingredients": Array [
                            Object {
                              "name": "steak",
                              "quantity": "3",
                            },
                          ],
                        },
                        Object {
                          "id": "2",
                          "ingredients": Array [
                            Object {
                              "name": "chicken",
                              "quantity": "2",
                            },
                          ],
                        },
                      ]
        }
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "favourites": Array [],
          "recipes": Array [
            Object {
              "id": "1",
              "ingredients": Array [
                Object {
                  "name": "steak",
                  "quantity": "3",
                },
              ],
            },
            Object {
              "id": "2",
              "ingredients": Array [
                Object {
                  "name": "chicken",
                  "quantity": "2",
                },
              ],
            },
          ],
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <CardGroup>
          <div
                    className="recipe"
          >
                    <Link
                              className="card"
                              replace={false}
                              to="/recipe/1"
                    >
                              <Recipe
                                        recipe={
                                                  Object {
                                                            "id": "1",
                                                            "ingredients": Array [
                                                              Object {
                                                                "name": "steak",
                                                                "quantity": "3",
                                                              },
                                                            ],
                                                          }
                                        }
                              />
                    </Link>
                    <Favourite
                              favourite={false}
                              recipeId="1"
                    />
          </div>
          <div
                    className="recipe"
          >
                    <Link
                              className="card"
                              replace={false}
                              to="/recipe/2"
                    >
                              <Recipe
                                        recipe={
                                                  Object {
                                                            "id": "2",
                                                            "ingredients": Array [
                                                              Object {
                                                                "name": "chicken",
                                                                "quantity": "2",
                                                              },
                                                            ],
                                                          }
                                        }
                              />
                    </Link>
                    <Favourite
                              favourite={false}
                              recipeId="2"
                    />
          </div>
</CardGroup>,
        "_debugID": 2,
        "_renderedOutput": <CardGroup>
          <div
                    className="recipe"
          >
                    <Link
                              className="card"
                              replace={false}
                              to="/recipe/1"
                    >
                              <Recipe
                                        recipe={
                                                  Object {
                                                            "id": "1",
                                                            "ingredients": Array [
                                                              Object {
                                                                "name": "steak",
                                                                "quantity": "3",
                                                              },
                                                            ],
                                                          }
                                        }
                              />
                    </Link>
                    <Favourite
                              favourite={false}
                              recipeId="1"
                    />
          </div>
          <div
                    className="recipe"
          >
                    <Link
                              className="card"
                              replace={false}
                              to="/recipe/2"
                    >
                              <Recipe
                                        recipe={
                                                  Object {
                                                            "id": "2",
                                                            "ingredients": Array [
                                                              Object {
                                                                "name": "chicken",
                                                                "quantity": "2",
                                                              },
                                                            ],
                                                          }
                                        }
                              />
                    </Link>
                    <Favourite
                              favourite={false}
                              recipeId="2"
                    />
          </div>
</CardGroup>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <List
    favourites={Array []}
    recipes={
        Array [
            Object {
              "id": "1",
              "ingredients": Array [
                Object {
                  "name": "steak",
                  "quantity": "3",
                },
              ],
            },
            Object {
              "id": "2",
              "ingredients": Array [
                Object {
                  "name": "chicken",
                  "quantity": "2",
                },
              ],
            },
          ]
    }
/>,
}
`;
